fix show on mobile

--- a/src/components/page/DynamicPage.module.css
+++ b/src/components/page/DynamicPage.module.css
@@ -269,9 +269,9 @@
 .main > .pageSection:nth-child(3) {
     margin-top: -84px;
 
-    @media (max-width: 600px) {
+    /* @media (max-width: 600px) {
         margin-top: -120px;
-    }
+    } */
 
     /* @media (max-width: 399px) {
         margin-top: -140px;
